# bcnotif

./: .gitignore  BC-Info.fsproj  BCInfo.fsproj  BcListeners.fsproj  Cargo.toml  Config.yaml  LICENSE  README.md  bc-listeners.cabal  default.nix  paket.dependencies  paket.references
sql/: schema.sql
src/: Average.fs  Config.fs  Feed.fs  Feed.hs  Main.fs  Main.hs  Notification.fs  Notification.hs  Program.fs  Util.fs  config.rs  database.rs  err.rs  error.rs  main.rs  math.rs  notification.rs  notify.rs  path.rs  util.rs
src/config/: generation.rs  macros.rs  mod.rs
src/feed/: listeners.rs  mod.rs  parse.rs  scrape.rs  statistics.rs  stats.rs
src/util/: error.rs  mod.rs  windows.rs
