[package]
name = "bcnotif"
version = "0.0.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
dirs = "~2.0.0"
gumdrop = "~0.7.0"
libc = "~0.2.0"
nix = "~0.17.0"
notify-rust = "~3.6.0"
num-traits = "~0.2.0"
num-derive = "~0.3.0"
once_cell = "~1.3.0"
parking_lot = "~0.10.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "~1.4.0"
snafu = "~0.6.0"
strum = "~0.18.0"
strum_macros = "~0.18.0"
toml = "~0.5.0"
ureq = "~1.2.0"

[dependencies.chrono]
version = "~0.4.0"
features = [ "serde" ]

[dependencies.diesel]
version = "~1.4.0"
default-features = false
features = [ "sqlite", "chrono" ]

[profile.release]
lto = true
codegen-units = 1