[package]
name = "bcnotif"
version = "0.0.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
anyhow = "~1.0.0"
dirs-next = "~1.0.0"
libc = "~0.2.0"
nix = "0.18"
notify-rust = "~4.0.0"
num-traits = "~0.2.0"
num-derive = "~0.3.0"
once_cell = "~1.4.0"
parking_lot = "~0.11.0"
pico-args = { version = "~0.3.0", default-features = false }
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "~1.4.0"
strum = "~0.18.0"
strum_macros = "~0.18.0"
thiserror = "~1.0.0"
toml = "~0.5.0"

[dependencies.attohttpc]
version = "~0.14.0"
default-features = false
features = [ "tls-rustls" ]

[dependencies.chrono]
version = "~0.4.0"
features = [ "serde" ]

[dependencies.diesel]
version = "~1.4.0"
default-features = false
features = [ "sqlite", "chrono" ]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release.package.syn]
opt-level = 0
codegen-units = 256

[profile.release.package.quote]
opt-level = 0
codegen-units = 256

[profile.release.package.num-derive]
opt-level = 0
codegen-units = 256

[profile.release.package.proc-macro2]
opt-level = 0
codegen-units = 256

[profile.release.package.serde_derive]
opt-level = 0
codegen-units = 256

[profile.release.package.strum_macros]
opt-level = 0
codegen-units = 256

[profile.release.package.diesel_derives]
opt-level = 0
codegen-units = 256

[profile.release.package.thiserror-impl]
opt-level = 0
codegen-units = 256